feat: implementa entidade BannedUser e configuração de banco de dados H2 para testes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=UserManagement
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:velvet
+spring.datasource.driver=org.h2.Driver
+spring.datasource.username=velvet
+spring.datasource.password=
+
+# Configurações do JPa // HIBERNATES
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
