--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=UserManagement
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:velvet
+spring.datasource.url=jdbc:h2:file:./data/velvetDB;DB_CLOSE_DELAY=0;DB_CLOSE_ON_EXIT=FALSE;
 spring.datasource.driver=org.h2.Driver
 spring.datasource.username=velvet
 spring.datasource.password=
 
 # Configurações do JPa // HIBERNATES
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
